2004-01-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-netstatus should also be in proposed.

2004-01-04  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added dasher to proposed.

2004-01-03  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gal should also be in proposed.

2004-01-03  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gtkhtml should also be in proposed.

2004-01-03  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added a "proposed" section with modules
	proposed for the GNOME 2.6 release.

2004-01-02  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added epiphany-extensions.

2003-12-31  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: zenity has been branched.

2003-12-29  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: Set gnumeric branch to "gnumeric-1-2".

2003-12-29  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: Added setup-tools-backends.

2003-12-28  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added msm.

2003-12-19  Danilo Šegan  <dsegan@gmx.net>

	* ignored-lang-list: Added "de@bavarian".

2003-12-19  Danilo Šegan  <dsegan@gmx.net>

	* ignored-lang-list: Added this file with "sr@Latn".

2003-12-17  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added evolution-data-server.

2003-12-16  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-keyring.
	Sorted gnome-jabber correctly.

2003-12-16  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added meld.

2003-12-15  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed bse.

2003-12-07  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: Added gnome-jabber.

2003-12-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added medusa.

2003-12-04  Christian Neumair  <chris@gnome-de.org>
