@@ -1329,6 +1329,17 @@
       </component>
     </version>
   </module>
+  <module name="gnome-volume-manager">
+    <version release="gnome-2.6">
+      <component name="gnome-volume-manager" dir="gnome-volume-manager" group="extras">
+	<podir dir="po"/>
+	<potname name="gnome-volume-manager.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="gnomechat">
     <version release="gnome-2.6">
       <component name="gnomechat" dir="gnomechat" group="extras">
