@@ -1,3 +1,7 @@
+2004-01-14  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added gnome-volume-manager.
+
 2004-01-07  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: gnome-netstatus should also be in proposed.
